samus: Add coreboot board
Add the coreboot board files for samus
- Based on Bolt
- GPIO setup based on 0.91 schematic
- Support both memory types
- No HDA verb table for this platform
- Some GPIO interrupts are shared and need to be passed to OS

BUG=chrome-os-partner:22996
BRANCH=samus
TEST=emerge-samus chromeos-coreboot-samus

Change-Id: I8dbd7639456c631a0115b03a493d94b5e2361ab5
Signed-off-by: Duncan Laurie <dlaurie@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/171694
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/mainboard/google/Kconfig
+++ b/src/mainboard/google/Kconfig
@@ -46,6 +46,8 @@ config BOARD_GOOGLE_PEPPY
 	bool "Peppy"
 config BOARD_GOOGLE_PIT
 	bool "Pit"
+config BOARD_GOOGLE_SAMUS
+	bool "Samus"
 config BOARD_GOOGLE_SLIPPY
 	bool "Slippy"
 config BOARD_GOOGLE_SNOW
@@ -65,6 +67,7 @@ source "src/mainboard/google/nyan/Kconfig"
 source "src/mainboard/google/parrot/Kconfig"
 source "src/mainboard/google/peppy/Kconfig"
 source "src/mainboard/google/pit/Kconfig"
+source "src/mainboard/google/samus/Kconfig"
 source "src/mainboard/google/slippy/Kconfig"
 source "src/mainboard/google/snow/Kconfig"
 source "src/mainboard/google/stout/Kconfig"
