tegra124: add basic SPI driver
This adds a basic SPI driver for reading SPI flash content. It uses
the DMA engine, albeit in a sub-optimal manner for now with the
intention of future optimizations to shave a few dozen milliseconds
off boot time.

BUG=none
BRANCH=none
TEST=read SPI flash on Nyan

Signed-off-by: David Hendricks <dhendrix@chromium.org>

Change-Id: Ic68348add093f014a6b3f08ace5719de035629be
Reviewed-on: https://chromium-review.googlesource.com/172952
Reviewed-by: Ronald Minnich <rminnich@chromium.org>
Commit-Queue: Ronald Minnich <rminnich@chromium.org>
Tested-by: Ronald Minnich <rminnich@chromium.org>

--- a/src/soc/nvidia/tegra124/Kconfig
+++ b/src/soc/nvidia/tegra124/Kconfig
@@ -59,6 +59,14 @@ config STACK_SIZE
 	hex
 	default 0x800
 
+config CBFS_CACHE_ADDRESS
+	hex "memory address to put CBFS cache data"
+	default 0x803c0000
+
+config CBFS_CACHE_SIZE
+	hex "size of CBFS cache data"
+	default 0x00013000
+
 choice CONSOLE_SERIAL_TEGRA124_UART_CHOICES
 	prompt "Serial Console UART"
 	default CONSOLE_SERIAL_UARTA
