nyan: Add a mainboard specific bootblock.
We need somewhere to put mainboard specific bootblock initialization.

BUG=None
TEST=Built and booted into the bootblock on nyan.
BRANCH=None

Change-Id: Ief409baff5ae67871879291c7ff0533f19ea6e56
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/172582
Reviewed-by: Ronald Minnich <rminnich@chromium.org>
Reviewed-by: Julius Werner <jwerner@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>

--- a/src/mainboard/google/nyan/Makefile.inc
+++ b/src/mainboard/google/nyan/Makefile.inc
@@ -27,6 +27,8 @@ $(obj)/generated/bct.cfg:
 
 subdirs-y += bct
 
+bootblock-y += bootblock.c
+
 romstage-y += romstage.c
 
 ramstage-y += mainboard.c
