--- a/src/mainboard/google/nyan/Kconfig
+++ b/src/mainboard/google/nyan/Kconfig
@@ -23,6 +23,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
 	select ARCH_ARM
 	select SOC_NVIDIA_TEGRA124
+	select MAINBOARD_HAS_BOOTBLOCK_INIT
 
 config MAINBOARD_DIR
 	string
