nyan: tegra124: Set up dynamic cbmem.
BUG=None
TEST=Built and booted into ramstage on nyan. After this change, ramstage gets
past setting up cbmem and fails when trying to load a payload.
BRANCH=None

Change-Id: I65403ecb65c7e1a45d61b1ead9460a73d85f750a
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/173542
Reviewed-by: Ronald Minnich <rminnich@chromium.org>
Tested-by: Ronald Minnich <rminnich@chromium.org>
Commit-Queue: Ronald Minnich <rminnich@chromium.org>

--- a/src/soc/nvidia/tegra124/Makefile.inc
+++ b/src/soc/nvidia/tegra124/Makefile.inc
@@ -21,6 +21,7 @@ bootblock-$(CONFIG_CONSOLE_SERIAL_UART) += uart.c
 endif
 
 romstage-y += cbfs.c
+romstage-y += cbmem.c
 romstage-y += dma.c
 romstage-y += monotonic_timer.c
 romstage-y += spi.c
@@ -30,6 +31,7 @@ romstage-$(CONFIG_CONSOLE_SERIAL_UART) += uart.c
 endif
 
 ramstage-y += cbfs.c
+ramstage-y += cbmem.c
 ramstage-y += dma.c
 ramstage-y += monotonic_timer.c
 ramstage-y += spi.c
