tegra124: Add an soc.c which sets up the chip operations and memory resource.
With this memory resource, the payload loading code can allocate a bounce
buffer and load the payload successfully. Depthcharge still doesn't start, but
that's probably because it's not finding the coreboot tables for some reason.

BUG=None
TEST=Built and booted to the payload on nyan.
BRANCH=None

Change-Id: I12f1d3d14c40776698077aab383dfd4b22054441
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/173543
Reviewed-by: Ronald Minnich <rminnich@chromium.org>
Tested-by: Ronald Minnich <rminnich@chromium.org>
Commit-Queue: Ronald Minnich <rminnich@chromium.org>

--- a/src/soc/nvidia/tegra124/Makefile.inc
+++ b/src/soc/nvidia/tegra124/Makefile.inc
@@ -34,6 +34,7 @@ ramstage-y += cbfs.c
 ramstage-y += cbmem.c
 ramstage-y += dma.c
 ramstage-y += monotonic_timer.c
+ramstage-y += soc.c
 ramstage-y += spi.c
 ramstage-y += timer.c
 ramstage-$(CONFIG_CONSOLE_SERIAL_UART) += uart.c
