tegra124: Build source files into the various stges needed by CONFIG_CHROMEOS.
The CONFIG_CHROMEOS kconfig option brings some source files into the rom and
ram stages which rely on other functions in other source files. Build those in
preemptively so that CONFIG_CHROMEOS can be turned on cleanly.

BUG=None
TEST=Built and booted into depthcharge on nyan.
BRANCH=None

Change-Id: Ib8bd88ae526be3ad7a9186973d37af67fe3c59ce
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/173790
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>

--- a/src/soc/nvidia/tegra124/Makefile.inc
+++ b/src/soc/nvidia/tegra124/Makefile.inc
@@ -24,10 +24,12 @@ romstage-y += cbfs.c
 romstage-y += cbmem.c
 romstage-y += early_display.c
 romstage-y += dma.c
-romstage-y += ../tegra/gpio.c
+romstage-y += i2c.c
 romstage-y += monotonic_timer.c
-romstage-y += ../tegra/pinmux.c
 romstage-y += spi.c
+romstage-y += ../tegra/gpio.c
+romstage-y += ../tegra/i2c.c
+romstage-y += ../tegra/pinmux.c
 romstage-y += timer.c
 ifeq ($(CONFIG_EARLY_CONSOLE),y)
 romstage-$(CONFIG_CONSOLE_SERIAL_UART) += uart.c
@@ -39,9 +41,13 @@ ramstage-y += cpug.S
 ramstage-y += clock.c
 ramstage-y += display.c
 ramstage-y += dma.c
+ramstage-y += i2c.c
 ramstage-y += monotonic_timer.c
 ramstage-y += soc.c
 ramstage-y += spi.c
+ramstage-y += ../tegra/gpio.c
+ramstage-y += ../tegra/i2c.c
+ramstage-y += ../tegra/pinmux.c
 ramstage-y += timer.c
 ramstage-$(CONFIG_CONSOLE_SERIAL_UART) += uart.c
 
