nyan: Enable the CHROMEOS and ChromeOS EC related kconfig options.
We need to enable the CHROMEOS option in order to put GPIO information in the
coreboot tables, and that turns on other code which expects to be able to talk
to the ChromeOS EC.

BUG=None
TEST=Built and booted into depthcharge on nyan.
BRANCH=None

Change-Id: Ie2e1276f661e392841899231f3f22e158614bfa1
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/173792
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>

--- a/src/mainboard/google/nyan/Kconfig
+++ b/src/mainboard/google/nyan/Kconfig
@@ -22,6 +22,9 @@ if BOARD_GOOGLE_NYAN
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
 	select ARCH_ARM
+	select CHROMEOS
+	select EC_GOOGLE_CHROMEEC
+	select EC_GOOGLE_CHROMEEC_SPI
 	select SOC_NVIDIA_TEGRA124
 	select MAINBOARD_HAS_BOOTBLOCK_INIT
 
@@ -70,5 +73,9 @@ config BOOT_MEDIA_SPI_CHIP_SELECT
 	default 0
 	help
 	  Which chip select to use for boot media.
+
+config EC_GOOGLE_CHROMEEC_SPI_BUS
+	hex
+	default 1
 
 endif # BOARD_GOOGLE_NYAN
