--- a/src/cpu/x86/Kconfig
+++ b/src/cpu/x86/Kconfig
@@ -116,4 +116,9 @@ config X86_AMD_FIXED_MTRRS
 	  This option informs the MTRR code to use the RdMem and WrMem fields
 	  in the fixed MTRR MSRs.
 
-
+config PARALLEL_MP
+	def_bool n
+	help
+	 This option uses common MP infrastructure for bringing up APs
+	 in parallel. It additionally provides a more flexible mechanism
+	 for sequencing the steps of bringing up the APs.
