--- a/src/soc/intel/baytrail/Kconfig
+++ b/src/soc/intel/baytrail/Kconfig
@@ -15,6 +15,7 @@ config CPU_SPECIFIC_OPTIONS
 	select COLLECT_TIMESTAMPS
 	select CPU_MICROCODE_IN_CBFS
 	select DYNAMIC_CBMEM
+	select HAVE_MONOTONIC_TIMER
 	select HAVE_SMI_HANDLER
 	select HAVE_HARD_RESET
 	select MMCONF_SUPPORT
@@ -27,6 +28,7 @@ config CPU_SPECIFIC_OPTIONS
 	select SPI_FLASH
 	select SSE2
 	select TSC_CONSTANT_RATE
+	select TSC_MONOTONIC_TIMER
 	select TSC_SYNC_MFENCE
 	select UDELAY_TSC
 
