--- a/src/mainboard/google/nyan/Kconfig
+++ b/src/mainboard/google/nyan/Kconfig
@@ -27,6 +27,8 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select EC_GOOGLE_CHROMEEC_SPI
 	select SOC_NVIDIA_TEGRA124
 	select MAINBOARD_HAS_BOOTBLOCK_INIT
+	select MAINBOARD_DO_NATIVE_VGA_INIT
+
 
 config MAINBOARD_DIR
 	string
