panther: Initial coreboot commit
(Panther clone of Ia41af8425ab6c24746253abd025acd3365dd5a18 by reinauer)

BUG=chrome-os-partner:23563
TEST=emerge-panther chromeos-coreboot-panther

Change-Id: I50fd5c02da154e424dfefbe2020f4ce7ef9a4f8f
Reviewed-on: https://chromium-review.googlesource.com/174555
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Commit-Queue: Mohammed Habibulla <moch@chromium.org>
Tested-by: Mohammed Habibulla <moch@chromium.org>

--- a/src/mainboard/google/Kconfig
+++ b/src/mainboard/google/Kconfig
@@ -40,6 +40,8 @@ config BOARD_GOOGLE_LINK
 	bool "Link"
 config BOARD_GOOGLE_NYAN
 	bool "Nyan"
+config BOARD_GOOGLE_PANTHER
+	bool "Panther"
 config BOARD_GOOGLE_PARROT
 	bool "Parrot"
 config BOARD_GOOGLE_PEPPY
@@ -66,6 +68,7 @@ source "src/mainboard/google/falco/Kconfig"
 source "src/mainboard/google/kirby/Kconfig"
 source "src/mainboard/google/link/Kconfig"
 source "src/mainboard/google/nyan/Kconfig"
+source "src/mainboard/google/panther/Kconfig"
 source "src/mainboard/google/parrot/Kconfig"
 source "src/mainboard/google/peppy/Kconfig"
 source "src/mainboard/google/pit/Kconfig"
