COMMIT-QUEUE.ini: Add documentation.
BUG=chromium:285940
TEST=none

Change-Id: I90ee8999ed8b5234b622ea02bfe580068aaff01e
Reviewed-on: https://chromium-review.googlesource.com/175327
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: David James <davidjames@chromium.org>
Tested-by: David James <davidjames@chromium.org>

--- a/COMMIT-QUEUE.ini
+++ b/COMMIT-QUEUE.ini
@@ -2,6 +2,9 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+# Per-project Commit Queue settings.
+# Documentation: http://goo.gl/4rZhAx
+
 [GENERAL]
 
 # Stages to ignore in the commit queue. If these steps break, your CL will be
