--- a/src/lib/Makefile.inc
+++ b/src/lib/Makefile.inc
@@ -111,8 +111,8 @@ ramstage-y += cbmem_info.c
 ramstage-y += hexdump.c
 romstage-y += hexdump.c
 
-ramstage-y += reg_script.c
-romstage-y += reg_script.c
+ramstage-$(CONFIG_REG_SCRIPT) += reg_script.c
+romstage-$(CONFIG_REG_SCRIPT) += reg_script.c
 
 ramstage-$(CONFIG_CONSOLE_NE2K) += ne2k.c
 
