--- a/src/drivers/i2c/tpm/Makefile.inc
+++ b/src/drivers/i2c/tpm/Makefile.inc
@@ -1,2 +1,2 @@
-ramstage-$(CONFIG_I2C_TPM) += tis_i2c.c tpm.c tpm_tis_i2c.c
-romstage-$(CONFIG_I2C_TPM) += tis_i2c.c tpm.c tpm_tis_i2c.c
+ramstage-$(CONFIG_I2C_TPM) += tis.c tpm.c
+romstage-$(CONFIG_I2C_TPM) += tis.c tpm.c
