tegra124: Address old main CPU starting review feedback.
Back when the code which got very basic things set up on the main CPUs was
committed, there was some late arriving review feedback that wasn't addressed.
This change goes back and addresses some of that feedback by renaming things
to maincpu instead of cpug, and reducing the alignment of the assembly.

The stack is still passed in from the C code because even though we always use
the same stack now, in the future we may want to start additional CPUs with
different stacks. I also kept the name maincpu_setup (originally cpug_setup)
instead of renaming it maincpu_enter because it should never be called
directly and doesn't "enter" the new CPU, it's run when the CPU comes out of
reset and gets some basic things setup for the main code written in C.

BUG=None
TEST=Booted on nyan.
BRANCH=None

Change-Id: Ia8e9fd07f9753f9ebcd51f29ca6876850f5380b7
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/175933
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>

--- a/src/soc/nvidia/tegra124/Makefile.inc
+++ b/src/soc/nvidia/tegra124/Makefile.inc
@@ -4,10 +4,10 @@ bootblock-y += bootblock.c
 bootblock-y += bootblock_asm.S
 bootblock-y += cbfs.c
 bootblock-y += clock.c
-bootblock-y += cpug.S
 bootblock-y += dma.c
 bootblock-y += i2c.c
 bootblock-y += dma.c
+bootblock-y += maincpu.S
 bootblock-y += monotonic_timer.c
 bootblock-y += power.c
 bootblock-y += spi.c
@@ -37,11 +37,11 @@ endif
 
 ramstage-y += cbfs.c
 ramstage-y += cbmem.c
-ramstage-y += cpug.S
 ramstage-y += clock.c
 ramstage-y += display.c displayhack.c
 ramstage-y += dma.c
 ramstage-y += i2c.c
+ramstage-y += maincpu.S
 ramstage-y += monotonic_timer.c
 ramstage-y += soc.c
 ramstage-y += sor.c
