--- a/src/mainboard/google/nyan/Kconfig
+++ b/src/mainboard/google/nyan/Kconfig
@@ -89,7 +89,7 @@ config EC_GOOGLE_CHROMEEC_SPI_BUS
 	default 1
 
 config NYAN_IN_A_PIXEL
-	bool
+	bool "Nyan in a pixel case"
 	default n
 
 endif # BOARD_GOOGLE_NYAN
